lab/07-10.mtls-pa-permissive-mode-webapp.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: pa-fleetman-webapp
spec:
  selector:
    matchLabels:
      app: fleetman-webapp
  mtls:
    mode: PERMISSIVE
