lab/03-1.create-2-staff-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
spec:
  selector:
    matchLabels:
      app: fleetman-staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-staff-service
        version: safe
    spec:
      containers:
      - name: staff-service
        image: richardchesterwood/istio-fleetman-staff-service:6-placeholder
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service-risky-version
spec:
  selector:
    matchLabels:
      app: fleetman-staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-staff-service
        version: risky
    spec:
      containers:
      - name: staff-service
        image: richardchesterwood/istio-fleetman-staff-service:6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
