lab/04-1.prefix-routing-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: fleetman-webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-webapp
        version: original
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/istio-fleetman-webapp-angular:6
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-experimental
spec:
  selector:
    matchLabels:
      app: fleetman-webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-webapp
        version: experimental
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/istio-fleetman-webapp-angular:6-experimental
        imagePullPolicy: Always
