lab/06-4.risky.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service-risky-version
spec:
  selector:
    matchLabels:
      app: fleetman-staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-staff-service
    spec:
      containers:
      - name: staff-service
        image: richardchesterwood/istio-fleetman-staff-service:6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
