lab/00-0.create-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  selector:
    matchLabels:
      app: fleetman-position-simulator
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-position-simulator
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/istio-fleetman-position-simulator:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  selector:
    matchLabels:
      app: fleetman-position-tracker
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-position-tracker
    spec:
      containers:
      - name: position-tracker
        image: richardchesterwood/istio-fleetman-position-tracker:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: fleetman-api-gateway
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-api-gateway
        version: v2
    spec:
      containers:
      - name: api-gateway
        image: richardchesterwood/istio-fleetman-api-gateway:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: fleetman-webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-webapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/istio-fleetman-webapp-angular:6
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-telemetry
spec:
  selector:
    matchLabels:
      app: fleetman-vehicle-telemetry
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-vehicle-telemetry
    spec:
      containers:
      - name: vehicle-telemtry
        image: richardchesterwood/istio-fleetman-vehicle-telemetry:6
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
spec:
  selector:
    matchLabels:
      app: fleetman-staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-staff-service
    spec:
      containers:
      - name: staff-service
        image: richardchesterwood/istio-fleetman-staff-service:6-placeholder
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-service
spec:
  selector:
    matchLabels:
      app: fleetman-photo-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman-photo-service
    spec:
      containers:
      - name: photo-service
        image: richardchesterwood/istio-fleetman-photo-service:6
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: fleetman-webapp
  ports:
    - name: http
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: fleetman-position-tracker
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  selector:
    app: fleetman-api-gateway
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-vehicle-telemetry
spec:
  selector:
    app: fleetman-vehicle-telemetry
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
spec:
  selector:
    app: fleetman-staff-service
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-photo-service
spec:
  selector:
    app: fleetman-photo-service
  ports:
    - name: http
      port: 8080
  type: ClusterIP
