lab/07-08.enable-peer-mtls-position-tracker.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: pa-fleetman-position-tracker
spec:
  selector:
    matchLabels:
      app: fleetman-position-tracker
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-fleetman-position-tracker
spec:
  host: "fleetman-position-tracker.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
